--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
   <string name="select_album">Select Album</string>
-  <string name="select_photo">Select Photo</string>
+  <string name="select_photo">Take a Photo</string>
 
   <string name="cancel">Cancel</string>
 </resources>
