--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,10 +1,10 @@
 <resources>
 
-  <string name="select_album">相册选取</string>
-  <string name="select_photo">相机拍摄</string>
+  <string name="photo_select_album">相册选取</string>
+  <string name="photo_select_photo">相机拍摄</string>
 
-  <string name="cancel">取消</string>
+  <string name="photo_cancel">取消</string>
 
-  <string name="permission_storage">请授予访问存储权限</string>
-  <string name="permission_storage_and_camera">请授予访问存储和相机权限</string>
+  <string name="photo_permission_storage">请授予访问存储权限</string>
+  <string name="photo_permission_storage_and_camera">请授予访问存储和相机权限</string>
 </resources>
