--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,5 @@
 
   <string name="photo_cancel">Cancel</string>
 
-  <string name="photo_permission_storage">Grant access to the storage</string>
-  <string name="photo_permission_storage_and_camera">Grant access to the storage and camera</string>
+  <string name="photo_permission_denied">Permission denied</string>
 </resources>
